--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "homepage": "https://github.com/charlie-wild/WebCrawlerFE#readme",
   "dependencies": {
     "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react-dom": "^16.7.0",
+    "react-scripts": "^2.1.3"
   },
   "browserslist": [
     ">0.2%",
