--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bulma": "^0.7.2",
+    "chart.js": "^2.7.3",
     "js-file-download": "^0.4.4",
     "react": "^16.7.0",
     "react-chartjs-2": "^2.7.4",
